# riasec-co

./: .gitignore  CHANGELOG.md  LICENSE  METHODOLOGY.md  PLAN.md  README.en.md  README.es.md  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml  update-data.yml
data/canonical/: convenios.csv  items_en.json  items_es.json  mapping.json
data/schema/: enrollment.schema.json  programs.schema.json
python/: pyproject.toml
python/src/riasec_co/: __init__.py  data.py  plotting.py  quiz.py  recommender.py  scoring.py
python/tests/: test_quiz.py  test_recommender.py  test_scoring.py
r/: DESCRIPTION  LICENSE  NAMESPACE
r/R/: data.R  loaders.R  quiz.R  recommend.R  scoring.R
r/data-raw/: generate.R
r/tests/: testthat.R
r/tests/testthat/: test-quiz.R  test-scoring.R
scripts/: generate-showcase.py  generate-usage-outputs.py  update-snies.ts  validate-data.ts
