[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "riasec-co"
version = "0.1.0"
description = "Bayesian adaptive RIASEC quiz engine with Colombian SNIES program data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Andres Romero", email = "me@afromero.co" }]
keywords = ["riasec", "holland", "vocational", "career", "guidance", "bayesian", "snies", "colombia"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "polars>=0.20",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.8", "plotly>=5.18"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.urls]
Homepage = "https://github.com/afromero/riasec-co"
Repository = "https://github.com/afromero/riasec-co"

[tool.hatch.build.targets.wheel]
packages = ["src/riasec_co"]

[tool.pytest.ini_options]
testpaths = ["tests"]
